test/lattests/extensions/objects1/bad/newVoidArray.lat
int main() {
    int x = new void[10];
    return 0;
}